<resources>
    <string name="app_name">TheWeatherTracking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Weather Tracking</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_devices">Devices</string>
    <string name="menu_now">The weather now</string>
    <string name="menu_today">The weather today</string>
    <string name="menu_yesterday">The weather yesterday</string>
    <string name="menu_three_days">The weather for the last three days</string>
    <string name="logout">Logout</string>

    <string name="tab_item_data">Values</string>
    <string name="tab_item_graph">Graphs</string>

    <string name="graph_bottom">Show graph</string>

    <string name="choose_device">Choose the devices:</string>
    <string name="device1">Device 1</string>
    <string name="device2">Device 2</string>
    <string name="device3">Device 3</string>

    <string name="tmstamp">tmstamp:</string>
    <string name="temperature">temperature:</string>
    <string name="pressure">pressure:</string>
    <string name="moisture">moisture:</string>
    <string name="luminosity">luminosity:</string>



    <!-- Key names for properties stored in shared properties -->
    <string name="security_bucket_name">security.preferences.bucket</string>
    <string name="security_token_value">security.token.value</string>
    <string name="security_token_expiration">security.token.expiration</string>
    <string name="security_device_value">security.device.value</string>
    <string name="security_login_value">security.login.value</string>
    <!-- Variables related to REST API -->
    <string name="api_root_url">http://185.255.132.229:8080</string>
</resources>