<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.today.TodayFragment">

    <Button
        android:id="@+id/btn_graph"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:insetBottom="0dp"
        android:text="@string/graph_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:id="@+id/table_today"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="209dp">

        <TableRow
            android:layout_marginTop="80dp">

            <LinearLayout
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/temperature_today"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temperature"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/pressure_today"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pressure"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/moisture_today"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/moisture"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/luminosity_today"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/luminosity"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent" />

        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>