<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_now">

    <fragment
        android:id="@+id/nav_now"
        android:name="ru.ifmo.se.theweathertracking.android.ui.now.NowFragment"
        android:label="@string/menu_now"
        tools:layout="@layout/fragment_now" >
        <action
            android:id="@+id/action_nav_now_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_today"
        android:name="ru.ifmo.se.theweathertracking.android.ui.today.TodayFragment"
        android:label="@string/menu_today"
        tools:layout="@layout/fragment_today" >
        <action
            android:id="@+id/action_nav_today_to_graphFragmnet"
            app:destination="@id/graphFragmnet" />
        <action
            android:id="@+id/action_nav_today_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_yesterday"
        android:name="ru.ifmo.se.theweathertracking.android.ui.yesterday.YesterdayFragment"
        android:label="@string/menu_yesterday"
        tools:layout="@layout/fragment_yesterday" >
        <action
            android:id="@+id/action_nav_yesterday_to_graphFragmnet"
            app:destination="@id/graphFragmnet" />
        <action
            android:id="@+id/action_nav_yesterday_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_three_days"
        android:name="ru.ifmo.se.theweathertracking.android.ui.threeDays.ThreeDaysFragment"
        android:label="@string/menu_three_days"
        tools:layout="@layout/fragment_three_days" >
        <action
            android:id="@+id/action_nav_three_days_to_graphFragmnet"
            app:destination="@id/graphFragmnet" />
        <action
            android:id="@+id/action_nav_three_days_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_devices"
        android:name="ru.ifmo.se.theweathertracking.android.ui.devices.DevicesFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_devices" >
        <action
            android:id="@+id/action_nav_devices_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>

    <activity
        android:id="@+id/loginActivity"
        android:name="ru.ifmo.se.theweathertracking.android.LoginActivity"
        android:label="LoginActivity"
        tools:layout="@layout/activity_login" >
    </activity>

    <activity
        android:id="@+id/signUpActivity"
        android:name="ru.ifmo.se.theweathertracking.android.SignUpActivity"
        android:label="SignUpActivity"
        tools:layout="@layout/activity_signup" >
    </activity>

    <fragment
        android:id="@+id/graphFragmnet"
        android:name="ru.ifmo.se.theweathertracking.android.ui.graph.GraphFragment"
        android:label="GraphFragment"
        tools:layout="@layout/fragment_graph" >
        <action
            android:id="@+id/action_graphFragmnet_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>
</navigation>